# matam_exercise_4

./: .gitignore  CMakeLists.txt  MatamStory.cpp  MatamStory.h  Utilities.cpp  log.txt
Events/: Event.cpp  Event.h  FightEntity.cpp  FightEntity.h
Players/: Player.cpp  Player.h  exception.h
